fixed spacing

--- a/style.css
+++ b/style.css
@@ -841,9 +841,9 @@ h2 {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 30px;
-  grid-auto-rows: minmax(100px, auto);
-  /* margin: 50px 0;
-  padding: 50px 0; */
+  grid-auto-rows: minmax(25px, auto);
+  /* margin: 50px 0; */
+  padding: 50px 0;
 }
 
 .products-card .col {
@@ -884,9 +884,9 @@ p {
     display: grid;
     grid-template-columns: repeat(3, 1fr) !important;
     gap: 30px;
-    grid-auto-rows: minmax(100px, auto);
-    margin: 50px 0;
-    padding: 50px 0;
+    /* grid-auto-rows: minmax(100px, auto); */
+    /* margin: 50px 0;
+    padding: 50px 0; */
   }
   .content {
     text-align: left;
@@ -903,9 +903,9 @@ p {
     display: grid;
     grid-template-columns: repeat(2, 1fr) !important;
     gap: 30px;
-    grid-auto-rows: minmax(100px, auto);
+    /* grid-auto-rows: minmax(100px, auto);
     margin: 50px 0;
-    padding: 50px 0;
+    padding: 50px 0; */
   }
   .content {
     text-align: left;
@@ -922,9 +922,9 @@ p {
     display: grid;
     grid-template-columns: repeat(1, 1fr) !important;
     gap: 30px;
-    grid-auto-rows: minmax(100px, auto);
+    /* grid-auto-rows: minmax(100px, auto);
     margin: 50px 0;
-    padding: 50px 0;
+    padding: 50px 0; */
   }
   .content {
     text-align: center !important;
@@ -965,7 +965,7 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 50px;
-  margin: 50px 0;
+  margin: 100px 0;
   width: 100%;
 }
 .sale-banner .row .col {
@@ -1022,8 +1022,12 @@ p {
   color: rgba(2, 37, 84, 0.8);
 }
 
+.sale-banner-text {
+  line-height: 35px;
+}
+
 .vr-img {
-  padding: 25px;
+  padding: 60px;
 }
 
 .timer-container p {
@@ -1118,7 +1122,7 @@ p {
   display: grid;
   grid-template-columns: repeat(3, 1fr) !important;
   gap: 30px;
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: minmax(50px, auto);
   /* padding: 50px 0; */
   width: 100%;
 }
@@ -1180,8 +1184,7 @@ p {
     display: grid;
     grid-template-columns: repeat(1, 1fr) !important;
     gap: 30px;
-    grid-auto-rows: minmax(100px, auto);
-    padding: 50px 0;
+    padding: 15px 0;
     width: 100%;
   }
   .news-blog .text-content {
@@ -1204,7 +1207,7 @@ p {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 50px 0;
+  /* margin: 50px 0; */
 }
 
 .newsletter-input {
@@ -1280,8 +1283,8 @@ footer .row {
   padding: 50px;
   display: grid;
   grid-template-columns: repeat(5, 1fr) !important;
-  gap: 100px;
-  grid-auto-rows: minmax(100px, auto);
+  gap: 50px;
+  margin-top: 100px;
 }
 
 .ftr-links li a {
@@ -1331,7 +1334,6 @@ footer .row .col p {
     display: grid;
     grid-template-columns: repeat(3, 1fr) !important;
     gap: 50px;
-    grid-auto-rows: minmax(100px, auto);
   }
 }
 
@@ -1340,7 +1342,6 @@ footer .row .col p {
     display: grid;
     grid-template-columns: repeat(1, 1fr) !important;
     gap: 50px;
-    grid-auto-rows: minmax(100px, auto);
     text-align: center;
   }
 }
@@ -1356,7 +1357,6 @@ footer .row .col p {
     display: grid;
     grid-template-columns: repeat(1, 1fr) !important;
     gap: 20px;
-    grid-auto-rows: minmax(0, 1fr);
     text-align: center;
     padding: 50px 0;
   }
@@ -1397,6 +1397,7 @@ footer .row .col p {
   gap: 50px;
   grid-auto-rows: minmax(100px, auto);
   border-radius: 10px;
+  margin-top: 30px;
 }
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
@@ -1405,6 +1406,7 @@ footer .row .col p {
   gap: 50px;
   grid-auto-rows: minmax(100px, auto);
   border-radius: 10px;
+  margin-top: 30px;
 }
 
 /* Create three equal columns that floats next to each other */
